# lingmo-gtk-theme

./: CMakeLists.txt
debian/: changelog  control
